Use zipfs to access dependency jars
Filesystems.newFilesystem() provides easy access to get a Path-based
view of the internals of a zip file.

This reworks ScannedDependency to work on top of that instead of
ZipFile.

JIRA: YANGTOOLS-1693
Change-Id: I3d81469b059db7b686675eb9834854a9180a9f40
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>